Page updated: 2018 Innovation Submission (item-cd716dd0-59b0-a24d-1ddb-2779369c52b2)

--- a/pages/2018-innovation-submission/index.html
+++ b/pages/2018-innovation-submission/index.html
@@ -1,6 +1,4 @@
-<meme-maker alt="nintendo oh no you didnt GIF" image-url="https://media1.giphy.com/media/iR6yuZyNBbwI/giphy.gif"
-    bottom-text="Not innovative" style="width: 50%;"></meme-maker>
-
+<meme-maker alt="nintendo oh no you didnt GIF" image-url="https://media1.giphy.com/media/iR6yuZyNBbwI/giphy.gif" bottom-text="Not innovative" style="width: 50%;"></meme-maker>
 <p>This is my submission to the TLT 2018 Open Innovation Challenge. 
 </p>
 <p>
