--- a/pages/hangouts-elmsln/index.html
+++ b/pages/hangouts-elmsln/index.html
@@ -1,6 +1,8 @@
 <p>This is to let you all know, that we've got a new "podcast" if you will that will give you a window into our world. Check out <a href="https://github.com/elmsln/hangouts">ELMS:LN hangouts on github</a>
 
+
 .</p>
 <video-player accent-color="teal" lang="en" preload="metadata" source="https://www.youtube.com/watch?v=o55m5yfdF-o" sticky-corner="top-right" youtube-id="o55m5yfdF-o?undefined" iframed="" source-type="youtube" is-a11y-media="" is-youtube="" media-title="ELMS:LN Code Review - Episode 1" style="width: 75%; margin: 0px auto; display: block;"></video-player>
-<p>Here's the show notes from episode one:</p>
+<p>Here's the <a href="https://github.com/elmsln/hangouts/blob/master/2019/02.11.md">show notes from episode one</a>
+:</p>
 <md-block source="https://raw.githubusercontent.com/elmsln/hangouts/master/2019/02.11.md" style="width: 100%; margin: 0px auto; display: block;"></md-block>
