Page updated: ELMS:LN Code review series (item-44797f99-e67b-41ce-a32f-57ccafea33ec)

--- a/pages/hangouts-elmsln/index.html
+++ b/pages/hangouts-elmsln/index.html
@@ -1,10 +1,13 @@
 <grid-plate style="width: 100%;" breakpoint-sm="900" breakpoint-md="1200" breakpoint-lg="1500" breakpoint-xl="1800" columns="2" layout="1:1" responsive-size="sm">  <h2 slot="col-1">Going to get really meta here..</h2>
 
 
-  <p slot="col-1" class="active-item">This is a video showing how this blog post was made. The post follows</p>
+
+  <p slot="col-1">This is a video showing how this blog post was made. The post follows</p>
+
 
 
   <video-player accent-color="blue" dark="dark" lang="en" preload="metadata" source="https://www.youtube.com/watch?v=V8UQOo5d4LQ" sticky-corner="top-right" youtube-id="V8UQOo5d4LQ?undefined" iframed="" source-type="youtube" is-a11y-media="" is-youtube="" media-title="Video showing how this blog post was made" slot="col-2"></video-player>
+
 
 
 
@@ -16,9 +19,11 @@
 
 
 
+
 .</p>
 <video-player accent-color="teal" lang="en" preload="metadata" source="https://www.youtube.com/watch?v=o55m5yfdF-o" sticky-corner="top-right" youtube-id="o55m5yfdF-o?undefined" iframed="" source-type="youtube" is-a11y-media="" is-youtube="" media-title="ELMS:LN Code Review - Episode 1" style="width: 75%; margin: 0px auto; display: block;"></video-player>
 <p>Here's the <a href="https://github.com/elmsln/hangouts/blob/master/2019/02.11.md">show notes from episode one</a>
+
 
 
 :</p>
