Page updated: Sustainable Systems Development: A moral issue (item-c6866e7a-1981-8c76-293a-0b96181e4945)

--- a/pages/sustainable-systems-development-a-moral-issue/index.html
+++ b/pages/sustainable-systems-development-a-moral-issue/index.html
@@ -5,6 +5,7 @@
 <p>This all brings me to the issue of morality in systems design / implementation. Systems should be designed in such a way that they are not only easy to use but easy to maintain and sustain for decades, not months and years.  Breaking down the walls between those creating the system and those in need of a system isn't just a best practice, it's a moral prerogative.</p>
 <p>The technical elites (haves) have a moral obligation to design and develop systems in such a way that everyone (even have nots) can use them.<b> Experience design (UX) is not just a "nice to have" requirement, it is a moral issue.</b>
 
+
  It is immoral to design something that allows the system to be dependent upon your knowledge (or any small group of people) to continue running.</p>
 <p>Yeah, believe me, it's very tempting to hand a system off to a client who has no clue what they're doing and intentionally design it so you'll always have to be involved.</p>
 <h2 class="hax-active">big money big money no Wammies... STOP.</h2>
@@ -13,37 +14,51 @@
 <ul><li style="">It is immoral to design something that only you understand how it works</li>
 
 
+
 <li style="">Systems must be designed with user-groups in mind (UX)</li>
+
 
 
 <li style=""><b><i>Every line of code should seek to empower people to never have to know it exists</i>
 
+
 </b>
 
+
 </li>
+
 
 
 <li style="">Solutions must be simple, elegant and understandable by the those tasked with managing the system after it is deployed.</li>
 
 
+
 <li style="">Talk early, and talk often. The more transparent you are in your design, development, and delivery processes the easier it would be for someone else to pick up your work and run with it</li>
+
 
 
 <li style=""><b>Be passionate in the code you write; if you're not into it, move on</b>
 
+
 </li>
+
 
 
 <li style="">We can write code to do lots of good and bad things; Don't take a job where you don't agree with the result</li>
 
 
+
 <li style="">Feedback, positive or negative is feedback and should be responded to in the same way</li>
+
 
 
 <li style="">Leverage developed code as much as you can so that glue / custom modules are as small as possible</li>
 
 
+
 <li style="">Realize that your never done (and be satisfied with it), you're simply advancing the ball a little further down the field every day, month, year, generation</li>
 
 
+
 </ul>
+<p><span style="caret-color: rgb(0, 0, 0);"><br/></span></p>
