--- a/pages/hax-the-dux/index.html
+++ b/pages/hax-the-dux/index.html
@@ -1,1 +1,13 @@
-<p>Ex uno Plures</p>
+<p>I was recently interviewed on the <a href="https://drunkenux.com/podcast/33-hax-the-planet/">Drunken UX podcast</a>
+, a show about all things web and user experience design. I was there to talk web components, block editors, and of course <a href="https://haxtheweb.org/">#HAXTheWeb</a>
+.</p>
+<p>The conversation steered into the advantages of web components over past technology solutions and libraries and is a really good consolidation of a lot of my thoughts about web components and their importance in building a more sustainable, open web. Half way through we turn to HAX and I'm left open to rant... (so I do)</p>
+<p>I'd like to unpack a statement because I realize that while I did an ok job of explaining it, I'd like to have it written down if it end sup coming up. I said something intentionally controversial because if we don't challenge those with power, regardless of their intention, then we are left accepting powerlessness as a feature instead of the bug that it is.</p>
+<h2>The quote</h2>
+<p>The takes place at 44:41 remaining in the show. <a href="https://drunkenux.com/podcast/">Please subscribe to, rate and review their podcast</a>
+ but I wanted to link to the audio here in context in case you wanted to listen to it while reading why I feel this way.</p>
+<paper-audio-player src="https://episodes.drunkenux.com/drunkenux/dux-e33.mp3" title="#33: HAX the Planet!" preload="auto" current-time="5102.640816" time-left="285.19265300000006" small-skip="15" large-skip="60" role="application" aria-label="Audio Player" aria-describedby="title" accent-color="purple" resource="#7b05d228-7263-fb95-435e" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org "></paper-audio-player>
+<lrndesign-blockquote citation="04/01/2019" image="files/crop-sm/IMG_20190127_153429.jpg" author="btopro" display-mode="leather" resource="#f2d9bcf3-7000-eacb-cf69" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " style="width: 100%; margin: 0px auto; display: block;">  <span>I see Gutenberg as a<br/>
+<strong>direct existential threat</strong>
+ to the open web [and OER].</span></lrndesign-blockquote>
+<p>Gutenberg is a fantastic idea with a lot of effort and resources and sleepless nights poured into it. And I'm just some jerk telling you that I think it's going to cause problems for all but technical elites who have mega corporation interests at heart.</p>
