--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>My site</title>
   <script type="text/javascript">
-  document.write("<base href='" + document.location.pathname.replace('index.html', '') + "' />");
+    document.write("<base href='" + document.location.pathname.substring(0, document.location.pathname.indexOf('/', 8)) + "/' />");
   </script>
   <link rel="preconnect" crossorigin href="https://fonts.googleapis.com">
   <link rel="preconnect" crossorigin href="https://cdnjs.cloudflare.com">
@@ -77,7 +77,7 @@
         view our website correctly. <a href="http://outdatedbrowser.com/">Update my browser now</a></div>
     </div>
   </div>
-  <script>document.body.removeAttribute('no-js');cdn="";var old=false;
+  <script>document.body.removeAttribute('no-js');var cdn="";var old=false;
     try { new Function('import("")'); } catch (err) {
       if (typeof Symbol == "undefined") { // IE 11 and ancient stuff
         document.getElementById('site').style.display = 'none';
