--- a/pages/fortify/index.html
+++ b/pages/fortify/index.html
@@ -6,12 +6,16 @@
 <p>I love building with my kids. Watching them get overjoyed at the simple and peculiar things. Like taking all their blankets out of the closet, ripping the couch cushions off to stack them juuuuuust right.</p>
 <p>We also enjoy playing zombie / monster attack in the basement. The lights go off and the flash lights come out, trying to find the zombie / monster that's roaming the basement, scratching the walls.</p>
 <p>YouTube entered into the equasion this evening</p>
-<grid-plate layout="8/4" responsive-size="sm" columns="2" style="width: 100%;">
+<grid-plate layout="8/4" responsive-size="xs" columns="2" style="width: 100%;">
 <p slot="col-1">Youtube helped expand the sense of adventure. I threw on some monster sound effects (suuppper creepy) and then set the phone at one end of the room.</p>
+
 <p slot="col-1">Slowly... creeping to the other side while they were confused (in the dark w/ flash lights) about all the noises and wondering how I was making creepy sounds like that... I snuck slowly over to the other side of the fort.</p>
+
 <p slot="col-1">Just as a flash light revealed my true, dad form, I lunged at the fort, chasing the children back inside.</p>
 
+
 <video-player slot="col-2" lang="en" preload="metadata" source="https://www.youtube.com/watch?v=Z-sSy8urj-c" sticky-corner="top-right" youtube-id="Z-sSy8urj-c" iframed="" source-type="youtube" is-a11y-media="" is-youtube="" class="active-item"></video-player>
+
 
 
 </grid-plate>
@@ -19,6 +23,7 @@
 <p>It's not all the code. It's not what powers this website even though I may talk about it a lot. It's those two crazies. "Our crazies" as my wife and I often say it. They keep us young, fun, silly, and smiling all the time.</p>
 <p>If I do have any selfish motivation for making this technology it's this -- I want my boys to not only know how much their dad loves them today, but in the future when they come across all the things I've written about them. About our time together. About how they've made me a better person.</p>
 <p>I've tried four times to accomplish that now. Four, different, blogs, all just trying to catalog my journeys through life, sometimes to stop and have an outlet when I'm in the middle of an emotional break (see, <a href="dood">Dood</a>
+
 ). It took me several hours over multiple days just copying, pasting, reformatting, and correcting those blog posts. My own work. In systems I understood.</p>
 <h2 class="hax-active">Not again.</h2>
 <p>This is the last migration. To a format that's pure and simple HTML, with web components to orchestrate it all. It's not some cheesy transition from talking about my kids into talking about our tech. It's reality.</p>
