Page updated: Ocean (item-70f48666-098d-42fa-8b9d-064f3e678583)

--- a/pages/ocean-so-deep/index.html
+++ b/pages/ocean-so-deep/index.html
@@ -1,1 +1,45 @@
-<p>Ex uno Plures</p>
+<p>Now and then, life feels like your adrift in an ocean of work on a sinking ship. There's water so choppy that it feels like you can't see land off in the distance let alone dream of swimming there. That was this week of converting elements by hand. But sometimes, when you think that the shore line is too far to swim, you prove yourself wrong.</p>
+<p>I haven't felt this confident in my abilities, process, team, and vision of where we're heading. I'm starting to be able to embrace it as opposed to grasping at straws. I'm finding my voice in this space and making my message more coherent.</p>
+<p>Usually I write of family victories or to recount something I see in the world. This is different though. I feel confident I'm going the right direction. I may exude confidence (loudness will come across that way at time) but really, I'm just trying to find my way in the dark water like we all are.</p>
+<h2 class="hax-active">What's taken place the last month</h2>
+<p>DrupalCon</p>
+<p>Drupalcon was a huge success. I've had interest in my work previously and it's always a cool feeling but it leaves you empty when you walk away without changing anyone's process. That you're trying to impart knowledge but also get people to join you on the life raft you stumbled on.</p>
+<p>This year we got people adopting our work (both HAX and WCFactory) on site, across multiple days. We worked out documentation issues and clearly struck a cord as far as coherence of message both me personally and Potter (<a href="https://twitter.com/hey__mp">@hey__mp</a>
+).</p>
+<p>And this isn't even to speak to the talk we did with <a href="https://twitter.com/kendalltotten">Kendall</a>
+ and <a href="https://twitter.com/castastrophee">Casandra</a>
+ from Red Hat. That talk was awesome and we got a lot of really good feedback and I think finally moved the needle on adoption of web components. That and I love their passion for our craft and Potter nailed his part too so I was so happy for him.</p>
+<p>Why do I care about adoption? Because the only way we'll transform the industry is if we're all pushing together. I have no idea what element or idea or library that someone in that road will produce that I can leverage next month, next year or further on.</p>
+<lrndesign-blockquote display-mode="photo" image="files/scale-50/headshot.jpg" citation="Activist" author="Btopro" resource="#f4e4aca7-d589-2bb6-3db6" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " style="width: 100%;">  <span>If we just get everyone adopting the platform, we can build a more vibrant, open education environment that much faster. The faster we work together, the faster we can liberate a lot of people..</span>
+</lrndesign-blockquote>
+<h2 class="hax-active">Google</h2>
+<p>I found a bug in the polymer CLI that directly related to our build routine. Unfortunately I'd never looked at typescript before, and the idea of contributing to a <b>google</b>
+ property is a bit daunting. Web components has been a bear just for me to figure out how to leverage their work, let alone rewrite part of their core compiler that allows us to work.</p>
+<p>But. 7 hours of frustration paid off and I was able to fix the issue (it was related to Firefox build routines and <a href="https://github.com/Polymer/tools/pull/3404">dynamic imports / bare path resolution</a>
+. boring stuff). My pull request was accepted rather quickly after explaining the problem to their engineers.</p>
+<p>This has left me feeling pretty good about what we're doing. You get those gut check situations occasionally and continue to soldier through hoping to find your way out of the ocean you're lost in. Imposter syndrome strikes us all, so it was a big break through for me to contribute to something we depend on and do so in a manner that tells me I know what I'm doing in this space.</p>
+<h2 class="hax-active">Porting our entire code base</h2>
+<p>It took about three days, but I completely rewrote and optimized all of our elements in our portfolio. In working towards this, I came to realize that we've made <b>433 elements </b>
+to date. I tend to say we have 168 or so elements but that's repos.</p>
+<p>That's an insanely daunting figure that's a testament to our team, as well as my process / workflow improvements of the last 6 months that would allow me to wrangle and enhance the quality of <b>433 items in three days.</b>
+</p>
+<p>In editing files by hand / bulk replace / preg, in the end I only came up with about 10 issues. This is after 7+ hour sprints of doing 0 testing. The web component development methodology in general as well as how we are doing it, is insane. The <a href="https://twitter.com/btopro/status/1124337677388668928">performance gains are nice</a>
+ but the process gains in this work are far greater.</p>
+<h2 class="hax-active">Reaching shore</h2>
+<p>I said, <a href="https://twitter.com/btopro/status/1124311582610284544">I'm finding my voice again in this space</a>
+ (<a href="https://www.youtube.com/watch?v=IPvEh3u6wU8&feature=youtu.be&t=969">I've had it before</a>
+ but have gone a bit dark in order to just swim to shore). We've been building an arsenal of elements, process, and people that believe in what we're doing. I <a href="https://drupal.psu.edu/blog/post/drupal-thesis">wrote my thesis</a>
+ in changing organizations through open contribution, and this.. "research project"... is... much wider in scope then that small scale exercise of the past.</p>
+<p>I've written before about the next research project. And now, we begin the climb on land toward that vision. The place where pedagogy is unleashed. Fun facts you can piece together, even if <b>you</b>
+ is just future me reading this to recall who I used to be.. and who I hopefully still am.</p>
+<ul><li>Last year (2018) the only place our work was rejected was internally and 1 national event (20/22). We've gotten 2 internal process proposals rejected internally, but that doesn't really matter because major companies and government agencies are moving to our approaches.</li>
+
+<li>HAXcms allows me to publish fluidly. Each time we go to get it installed some place else it's frustrating to get people over the "minor" hurdles, but these documentation and process refinements are reaching a tipping point.</li>
+<li>The non-code side of the team (who I build these things for) are very much on board with our vision of distributed data as well as the "rapid prototyping location" that is having the ground word laid for. As of this writing it has not been announced what's happening there.</li>
+<li>We've gotten commitments from multiple faculty to use the "rapid prototyping location" throughout summer, giving us feedback for what we hope to emerge in the fall.</li>
+<li>There's nothing you can't f'ing do kid. Keep going. The future is so bright and that light is finally shining on us brighter and brighter.</li>
+</ul>
+<h2 class="hax-active"><span style="caret-color: rgb(0, 0, 0);">The letter</span></h2>
+<p><span style="caret-color: rgb(0, 0, 0);">I posted this online.. I held it back for a long time. It was in the lead up to my first son being born (about a month before hand) and represents the day I woke up... finally... woke up to the fact that the industry I was in had been coopted. It's my formula for disruption and bringing about lasting social change, using technology as the vehicle.</span></p>
+<p><span style="caret-color: rgb(0, 0, 0);">I dated it because I knew one day, I'd look back on it. It's been on my desk every day since. I've never felt so alive.</span></p>
+<img src="files/scale-50/collapse.jpg" alt="The methodology of disruption as expressed by me, the day I decided to become an activist developer." style="width: 100%;"/>
