--- a/pages/lighthouse-100/index.html
+++ b/pages/lighthouse-100/index.html
@@ -6,9 +6,15 @@
 <p>@hey__mp opened our test site on his phone, on rural wifi (so DSL, and not good DSL) and had the site in 1 second. This HAXcms in production, is stupid fast. I decided to shoot a video talking about how we were able to achieve these stupidly fast scores given the following constraints we intentionally place on ourselves:</p>
 <ul><li>We do not bundle assets, we ship ES6 modules / AMD directly to browsers</li>
 
+
 <li>IE11 / things outside of ES6 window are shipped a watered down design</li>
+
 <li>Users must click through a UI and build a site much like they would in a CMS context, yet the system produce a high scoring offline capable PWA (so no developers hands in the PWA construction)</li>
+
 <li>We do not do server side rendering, it's all client side processed</li>
+
 <li>All decisions are made to ensure HAXcms micro-sites can run with or without HAXcms as part of our publishing methodology (so all sites are decentralizable / copy and paste capable and run anywhere)</li>
+
 </ul>
 <p><span style="caret-color: rgb(0, 0, 0);">So given these constrains,... how the hell were we able to achieve these scores? I encourage you to watch and find out.</span></p>
+<video-player accent-color="lime" dark="dark" iframed is-a11y-media is-youtube lang="en" media-title="Crazy deep performance walk through with HAXcms" preload="metadata" source="https://www.youtube.com/watch?v=7o8T1eymTnQ" source-type="youtube" sticky-corner="top-right" youtube-id="7o8T1eymTnQ" resource="#3e3cee5f-bc3f-b445-8b9f" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " sources="[]" tracks="[]"></video-player>
