--- a/pages/technical-weapons/index.html
+++ b/pages/technical-weapons/index.html
@@ -7,7 +7,9 @@
 <h2>The invisible hand</h2>
 <p>Technology shapes our perceptions. It shapes the way we interface with huge pieces of the world. What we buy, where we go, where we walk; influencing every blade of grass we'll pass and molecule of air inhaled.</p>
 <p>Raw, faceless, innocent technology (there's no such thing) does amazing things without us even noticing. How best to shape our technology than to wield maximal power? That's been the path of Silicon Valley the last decade. How best, to shape consumers to "<i>improve their lives</i>
+
 " by capturing dollars and tunneling them to the few from the many. Dollars and eye traffic in exchange for <i>conveniences</i>
+
 .</p>
 <h2>What of values beyond mere convenience?</h2>
 <p>A small example</p>
@@ -17,7 +19,9 @@
 <p>I can do all the work myself to build you a website in WIX.</p>
 <p>I can give you the website and you'll never need me again (you didn't already there).</p>
 <p>However, this convenience comes at a cost. <i><b>You'll never be able to stop using them</b>
+
 </i>
+
 .</p>
 <h2>Non-vendor (and hyperbolic)</h2>
 <p>You want to be educated.</p>
@@ -27,6 +31,7 @@
 <p>You want to learn. I want to teach. Structures limit this effectiveness.</p>
 <h2 class="hax-active">Worse</h2>
 <p>Worse, you need to learn. You can't move in society without learning. You. Need. Me. My knowledge. My expertise. My ability. And yet, you can't have it unless you sign away the next 10, maybe 15, at times 20 years of your life to ensure that you can have a <i>future</i>
+
 .</p>
 <p>Was, the positioning of the information behind the institution, a weapon? Did it have grave negative impacts on you just because we force technology to flow in a way that replicates this power flow dynamic?</p>
 <p>What's limiting in both scenarios is that an organization has abstracted you away from what you want. You want access to the individual with the knowledge. You want access to the thing at the end, and yet there is no technology to get you there or a gap too wide for you to cross on your own.</p>
@@ -36,22 +41,28 @@
 <p>A cruel world.</p>
 <p>(said tongue in cheek, I want to make it very clear how anti free college I am so that this next line is not taken out of context)</p>
 <p><i>What if College was free</i>
+
 ? What if we didn't need to pay for College and instead just got College service for free.</p>
 <h3>Framed another way</h3>
 <p>What if <i style="">Wix</i>
 
+
  was free? What if we didn't need to pay for <i>Wix</i>
+
 
  and instead just got <i>Wix</i>
 
+
  service for free.</p>
 <p>Who has the most to gain in this scenario? <b>The codification of knowledge brokering into the fabric of society</b>
+
 . Saying that an institutional need is important for individual success.</p>
 <p>Is this so? Or is this the false reality we've been handed?</p>
 <p>Must we implement solutions of the future based on structures of the past?</p>
 <p class="hax-active">Or can we go another way..</p>
 <h2>Individual as weapon</h2>
 <p>What if we constructed technology to not live with the institution or the corporation, but to live with the individual instead? Why is it we accept that a computer can live in our hand and conform to our desires but yet access to information or the ability to self publish. Those.. those <i>COULDN'T POSSIBLY</i>
+
  be done without institutions, organizations, and corporations. What happened to the text-editor, note-pad, the calculator, the web browser itself? Why is it we expect these to be free, the windows to low fidelity self expression on the same playing field as the portal to information across the world. These applications are free... why not additional levels of abstraction up from them?</p>
 <p>How could we, the little people, ever be able to compete with the faceless mega corporations of our world? These Gods of our copybook heading. These titans of industry.</p>
 <p><br/></p>
@@ -60,6 +71,7 @@
 <p>"You can't do it on your own, you need us" the demons of industry beckon.</p>
 <p>That's just what they want us to think; need, us, to, think.</p>
 <p><i>"We empower them, they do not control us"</i>
+
  to quote a line from a house genre song I enjoy.</p>
 <p><br/></p>
 <p>It's that simple an idea.</p>
@@ -67,7 +79,10 @@
 <p>Can we reclaim publishing? Education? Knowledge construction? Media production? Can we claim all of these spaces, returning them to the individual and defeat authoritarian edtech in the process?</p>
 <p>We live in a technologically weaponized age. It's time we bring a pen to the gun fight and write a new future without them.</p>
 <p><br/></p>
+<meme-maker image-url="files/scale-50/headshot3408605.23.jpg" top-text="I need you" bottom-text="To tansform education"></meme-maker>
 <p>This post, and this website, were written with <a href="https://haxtheweb.org/">HAX</a>
+
  using <a href="https://haxtheweb.org/haxcms-1">HAXcms</a>
+
 . My pen. Our weapon.</p>
 <p>Ex plures, plures.</p>
