Page updated: A new day (item-006601d9-4063-4bd9-ba32-3e959b631d31)

--- a/pages/a-new-day/index.html
+++ b/pages/a-new-day/index.html
@@ -1,1 +1,5 @@
-<p>Ex uno Plures</p>
+<p>A couch. It had to be the couch. The bastard scurries away, unheeding in the warnings of the past weeks. Undeterred in his quest for one thing. One, insatiable goal.</p>
+<p>To build a nest, in my "Effing" couch.</p>
+<meme-maker style="width: 75%;" alt="all your base meme" image-url="https://media2.giphy.com/media/jnBXe38Ww2XAI/giphy.gif" top-text="Ur couch haz n0️ tim3" bottom-text="🐿️🐿️ha🐿️🐿️ha🐿️🐿️ha🐿️🐿️" imageurl="https://media2.giphy.com/media/jnBXe38Ww2XAI/giphy.gif" toptext="Your couch has no chance to survive" bottomtext="It is my new home" dataeditable="" datahaxray="Meme"></meme-maker>
+<p>I'm talking of course about the hilariously painful reality of a 🐿️chipmunk🐿️ sneaking into a hole in my garage after being trapped there, working his way between pipes or God only knows where, and then taking up residence for a two weeks while we were away.</p>
+<p>In the process, my couch being the real victim (he's in a better place now, out in pieces on the lawn someone asked if they could take it to their camp so... he's resting)</p>
