--- a/pages/annabella/index.html
+++ b/pages/annabella/index.html
@@ -6,7 +6,9 @@
 <p>Before I could say no, my sister started yelling "Daddy! Daddy!". I remember giving her a look and we went on about our day, telling my parents who also thought she was being funny. Even at 5, trolling me to make a liar of me.</p>
 <p>I remember that moment as the first time I knew I wanted to be a dad. The <b>title</b>
 
+
 , the <b>responsibility</b>
+
 
 , it was from that moment on that it held so much weight to me. It seemed a bit heavy, even for that time, to want that responsibility; to know that it was to be part of my future.</p>
 <p>I mean, I am the oldest in my family, oldest grandchild, and was the only boy on both sides for 16 years. I was used to helping corral everyone or not having anyone into the same things as me or the little kids needing picked up.</p>
@@ -15,12 +17,14 @@
 <p>Children imprint on many people around that age (this would have been six at that time). I remember her asking if she could come over to play, or if she could take her to the park (which she did... without me,..lol). It was like she gained a friend too. I remember us discussing at the time how important this relationship was... referencing her and my sister.</p>
 <p>It was around this time I really got into Everclear (the band) and they were on the radio all the time. I got their CD called <i>Learning How to Smile</i>
 
+
  and just eating the songs up. But one in particular has always stayed with me for how it cuts me to ribbons emotionally called Annabella's Song.</p>
 <video-player style="width: 100%; margin: 0px auto; display: block;" accent-color="deep-purple" dark="" iframed="iframed" is-a11y-media="is-a11y-media" is-youtube="is-youtube" lang="en" media-title="Annabella's Song - Everclear" source="https://www.youtube.com/watch?v=GF7bKtaXhrc" source-type="youtube" youtube-id="GF7bKtaXhrc" schema-resource-id="#f4f74a88-45e4-607f-a073" sticky-corner="top-right" resource="#f4f74a88-45e4-607f-a073" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " sources="[]" tracks="[]"></video-player>
 <p><br/></p>
 <p>It's why my wife says she's glad we don't have girls. Because of how I get around babies, how I fall back into that "Daddy! Daddy!" in the grocery store mode and that they'd get anything they wanted. Well, I'm that way because of those memories and probably a lot because of that song.</p>
 <p>I didn't have a great college experience.. things fell apart and I was in the midst of a pretty deep depression at the time, and going for a walk late one night just needing to clear my head. I busted out my Dell DJ Ditty MP3 player (old skool) that had that song on it, putting it on repeat and just slowly walking into the night, a puddle the whole way.</p>
 <p>I remember staring up at the moon, heart broken at the time because of a failed relationship.. and playing this song as loud as I could and just crying the whole walk. I couldn't stop listening to it. The idea that I was away from <i>my kid</i>
+
 
  during the year, that I was growing up, and that she would be hurt by my girlfriend not being in her life. By my not being in her life much of the year aside from short phone calls or breaks from school..</p>
 <p>I see now how insane it all sounds. The rationalizing of a child about what's important, what will impact others..</p>
@@ -42,11 +46,12 @@
 <p>Tension fades.. but I knew as I related this story to my wife that I'd barely be able to tell it.. and that I could barely write it down now without falling to pieces.</p>
 <p>Because I've taken being a father as my ultimate prize since I was 15.. apparently. Everyone deserves that rock, those big shoulders to sit on, to cry on, to laugh with and most importantly to stick up on the ceiling.</p>
 <p>I know much of her interest in me is that I'm some big goof... but I match an imprint a small chid craves as well of a strong male figure; a role, however how small, however infrequent an occurrence, that I can play; that I am honored to be able to play. We all need role models of all different varieties (especially the ceiling lifting kind).</p>
-<p>That same imprint I worried my sister did with my girlfriend all those years ago.. the concern that I had with her being a good person for her to imprint with. The anxiety after things didn't work out.. I know that she still turned out great (my sister), and I know that whoever this one imprints on for fleeting moments... that she will turn out great too.</p>
+<p>That same imprint I worried my sister did with my girlfriend all those years ago.. the concern that I had with her being a good person for her to imprint with. The anxiety after things didn't work out.. I know that she still turned out great (my sister), and I know that whoever she imprints on for fleeting moments.. that she will turn out great too.</p>
 <p>She's too strong and her mom's too dedicated to her success for her not to turn out awesome.</p>
-<p>Deep down... I'm still that 15 year old proud to be called "Daddy" accidentally. I'm a sappy, happy, emotional wreck, anytime I can go back to playing that role in my head. Cause even acting that part for a few moments is validating.</p>
+<p>Deep down... I'm still that 15 year old proud to be called "Daddy", even when accidentally. I'm a sappy, happy, emotional wreck, anytime I can go back to playing that role in my head. Cause even acting the part for a few moments is fulfilling.. and I don't know how many more times my two will find it cool to still call me by my ultimate title.</p>
 <p>Through all the work, the hours, the tears.. I only have one real goal at the end of this life: to be a great dad.</p>
 <blockquote>Anna<br/>Tell me what you want<br/>Tell me what you need<br/>Anna, Anna<br/><b>You are never alone<br/>You are never alone</b>
+
 
 
 </blockquote>
