see if this syncs down from prod

--- a/pages/my-first-time-on-stage-1/index.html
+++ b/pages/my-first-time-on-stage-1/index.html
@@ -1,6 +1,4 @@
-<p>This, is probably going to become a weekly thing or at least I'll try and make it one. This is a recap of the <b>1st week</b>
- of class with <i><b>#EdTechJoker</b>
-</i>
+<p>This, is probably going to become a weekly thing or at least I'll try and make it one. This is a recap of the 1st week of class with <i><strong>#EdTechJoker</strong></i>
 .</p>
 <p>If you haven't followed the references, I'm code naming a research project EdTechJoker, a reference to my Masters Thesis work called Information Altruism. <i>TLDR;</i>
  <i>I studied the spread of Drupal by performing action research in which I attempted to get others to use Drupal by giving away my efforts for free.</i>
