--- a/pages/why-i-started-hax-camp/index.html
+++ b/pages/why-i-started-hax-camp/index.html
@@ -15,10 +15,16 @@
 <p>I believe that together, we can all openly share and learn from one another and benefit from each other's experiences, successes and failures, regardless of who we are or where we come from.</p>
 <p>I believe that together, platforms and framework wars aside, we can build a better tomorrow by putting down our shields and locking arms.</p>
 <p>I believe in HAX and the potential of <b>< hax-camp ></b>
+
  so much that I've spent <i><b>my own money</b>
+
 </i>
+
  to purchase over 40, customized hockey jerseys without logos or brands, to symbolize our variety, uniqueness and individuality of developers and platforms yet unified under one common platform.</p>
-<p>I believe in HAX camp 2019 as the beginning of something new and the forging of a new path. Will you join us and start a new beginning together?</p>
+<p>I believe in HAX camp 2019 as the beginning of something new and the forging of a new path. <a href="https://www.eventbrite.com/e/hax-camp-web-components-all-the-things-tickets-69761529613?aff=escb&utm-source=cp&utm-term=listing&utm-campaign=social&utm-medium=discovery&utm-content=attendeeshare">Will you join us and start a new beginning together?</a>
+</p>
+<p><a href="https://hax.camp/">hax.camp</a>
+</p>
 <grid-plate layout="4/4/4" responsive-size="xl" style="width: 100%;"><img src="files/EBd7L7eXkAAOW_d.jpg" slot="col-1" style="width: 75%;"/>
 
 <img src="files/IMG_20190729_213158.jpg" slot="col-3" style="width: 75%;"/><img src="files/IMG_20190819_205859.jpg" slot="col-3" style="width: 75%;"/>
