--- a/pages/why-i-started-hax-camp/index.html
+++ b/pages/why-i-started-hax-camp/index.html
@@ -8,7 +8,7 @@
 <p>I think that the <i>web component standard</i>
 
  poses an existential threat to the monopoly on talent, power and capabilities previously only held by an elite few. I think this will become more and more understood as people dig into the elements our team has created thus far and the ones we have planned to create which invoke containers on demand to blur the lines of what "static" systems can do.</p>
-<p>Take Drupal, a place I've called home for over a decade. Regularly you can pull $100 to $350 and hour for work because of the knowledge economy that's emerged there. That isn't equality. that isn't stability. Its rampant profiteering and a direct incentive to keep knowledge complex, locked away, and difficult to use.</p>
+<p>Take Drupal, a place I've called home for over a decade. Regularly you can pull $100 to $350 and hour for work because of the knowledge economy that's emerged there. That isn't equality. That isn't stability. Its rampant profiteering and a direct incentive to keep knowledge complex, locked away, and difficult to use.</p>
 <p>Take traditional front end languages like React, places I'm critical of. They require tooling, advanced JavaScript knowledge, conventions that are non-standard and non-uniform across frameworks. These jobs pay in the $140k - $200k a year range and contract work isn't as lucrative as Drupal but still up there.</p>
 <p>I can't teach the people around me React or how to leverage parts of React components in their Drupal backed CMS. I can't teach them how to write template code and grant them permission to edit these critical theme files just to render something on the page.</p>
 <p>But I can teach them that if they copy and paste a < video - player > tag like below, it'll render the same way every time.</p>
