--- a/pages/information-altruism-2-0/index.html
+++ b/pages/information-altruism-2-0/index.html
@@ -1,29 +1,29 @@
-<p style="width: 100%;">In 2006 I started Graduate school at Penn State. I didn't know why I was there other then to get an advanced degree and be exposed to different ideas. In that exposure though, I found my purpose. My thesis studied the spread of innovation at "A Large Land Grant Institution". While I loved doing the research and documenting it, it took a lot of time and paperwork and political movement (tribes moving on) in order to release.</p>
-<h2 style="width: 100%;" id="header-0a2f0586-5fcb-0b32-03ef-2c9328e71a9b">All that in a few bullets..</h2>
-<ul style="width: 100%;"><li>Open source spreads when you <b><i>give away knowledge</i>
+<p>In 2006 I started Graduate school at Penn State. I didn't know why I was there other then to get an advanced degree and be exposed to different ideas. In that exposure though, I found my purpose. My thesis studied the spread of innovation at "A Large Land Grant Institution". While I loved doing the research and documenting it, it took a lot of time and paperwork and political movement (tribes moving on) in order to release.</p>
+<h2 style="" id="header-0a2f0586-5fcb-0b32-03ef-2c9328e71a9b">All that in a few bullets..</h2>
+<ul style=""><li>Open source spreads when you <b><i>give away knowledge</i>
 </b>
 , not just code</li>
 <li>You can overwhelm systems because even complex systems are ultimately made up of individuals</li>
 <li>Person to person we can change policies and perceptions with community and superior coding practices</li>
 <li>As the new tribe moves, so moves the institution</li>
 </ul>
-<p style="width: 100%;"><span>There's lots of other take away's from the work that I had personally which are not provable yet I know to be true. The importance of counter-disinformation campaigns, the power of distance and wanting to be like "them" as long as "them" doesn't work down the hall, the power of targeted individuals to transform policy (or lack of policy), the power of one to replicate their desires in the world through many with the correct framing.</span></p>
+<p style=""><span>There's lots of other take away's from the work that I had personally which are not provable yet I know to be true. The importance of counter-disinformation campaigns, the power of distance and wanting to be like "them" as long as "them" doesn't work down the hall, the power of targeted individuals to transform policy (or lack of policy), the power of one to replicate their desires in the world through many with the correct framing.</span></p>
 <h2 style="width: 100%;" id="header-0a2f0586-5fcb-0b32-03ef-2c9328e71a9b">The PhD I'll never stop to get</h2>
-<p style="width: 100%;"><span>I think I can do it again, at a much larger scale, and with much greater impact. I've always felt this way; that my research was something I'd repeat the pattern of but do it at scale. I've got the first signs of that happening now; that the gears of the machine have been thoroughly greased and that it's starting to lurch forward.</span></p>
-<p style="width: 100%;"><span>So what is the new "research"? What is the new activist minded technology objective? Reduce the influence of political and institutional tribes through the direct empowerment of organizations and individuals to be free of the invisible structures that bind them.</span></p>
-<h2 style="width: 100%;" id="header-60a79625-d678-6a3d-b89e-ee8c878bb46e"><span>Lofty AF</span></h2>
-<p style="width: 100%;"><span>As usual right? When I started talking about my (previous) research project I'd actually started adding a disclaimer that said "I get pretty preachy so bare with me". DrupalCon Austin I even had a self-trolling intro that had fake alternate titles that I'd normally use (I mean the talk was Move over Edtech Vendors or some such thing).</span></p>
-<p style="width: 100%;"><i>So enough <b>hyperbole</b>
+<p style=""><span>I think I can do it again, at a much larger scale, and with much greater impact. I've always felt this way; that my research was something I'd repeat the pattern of but do it at scale. I've got the first signs of that happening now; that the gears of the machine have been thoroughly greased and that it's starting to lurch forward.</span></p>
+<p><span>So what is the new "research"? What is the new activist minded technology objective? Reduce the influence of political and institutional tribes through the direct empowerment of organizations and individuals to be free of the invisible structures that bind them.</span></p>
+<h2 style="" id="header-60a79625-d678-6a3d-b89e-ee8c878bb46e"><span>Lofty AF</span></h2>
+<p style=""><span>As usual right? When I started talking about my (previous) research project I'd actually started adding a disclaimer that said "I get pretty preachy so bare with me". DrupalCon Austin I even had a self-trolling intro that had fake alternate titles that I'd normally use (I mean the talk was Move over Edtech Vendors or some such thing).</span></p>
+<p style=""><i>So enough <b>hyperbole</b>
 ;</i>
  what is it I've been doing, what will I be doing with the next year, what are the methods of raging an a-political war against complacency?</p>
-<ol style="width: 100%;"><li>Front one: Government transformation</li>
+<ol style=""><li>Front one: Government transformation</li>
 <li>Front two: Educational transformation</li>
 <li>Front three: Tech Industry transformation</li>
 </ol>
 <h3 style="width: 100%;" id="header-f06e0c37-2762-f426-41a0-9c9b829c40f7">Front one: Government</h3>
-<p style="width: 100%;">I've been donating training, support, workflows, and code to help government agencies be more autonomous. I've been trying to get a targeted group as far ahead of the rest of the game as possible because I know that once they do and have success, it will drive others to want to follow their direction (Distance and wanting to achieve what "<b>they</b>
+<p style="">I've been donating training, support, workflows, and code to help government agencies be more autonomous. I've been trying to get a targeted group as far ahead of the rest of the game as possible because I know that once they do and have success, it will drive others to want to follow their direction (Distance and wanting to achieve what "<b>they</b>
 " have).</p>
-<p style="width: 100%;">By giving away trainings that "should cost $50k" we can start the process of collapsing the notion of what should be paid for and what knowledge is available for everyone. I don't know the immediate impacts of these efforts beyond the initial adopter; but I do know that based on my past efforts it's going to multiply exponentially within the next ~6-8 months.</p>
+<p style="">By giving away training that "should cost $50k" we can start the process of collapsing the notion of what should be paid for and what knowledge is available to everyone. I don't know the immediate impacts of these efforts beyond the initial adopter; but I do know that based on my past efforts it's going to multiply exponentially within the next ~8 months.</p>
 <h3 style="width: 100%;" id="header-a81dc74b-2b4a-e31e-c74a-898b0c221a4d">Front two: Education</h3>
 <p style="width: 100%;"><span>I've been donating time (as in I don't get paid and they get college credits) doing independent studies in exchange for contributions to our projects. By flipping the educational paradigm from one of sit, listen, study into one of activation, we can start to change the expectations of what higher education is about: action.</span></p>
 <p style="width: 100%;">My classroom (the real reason why I needed to finish my masters) is an incubator for activists and those wanting to go further than the baseline. We cover lots of topics throughout the semester which are all things needed to be able to contribute to HAX / ELMS:LN related projects.</p>
@@ -36,7 +36,7 @@
 <p style="width: 100%;"><span>There's three independent studies currently as well. One doing general clean up of issues, testing, making new basic elements and documenting how to make them. Another doing a dedicated, in depth UX study. And another working with a team to build a pandoc document converting microservice to power HAXcms instances to allow drag and drop file conversion (say from Word Doc's directly to HTML).</span></p>
 <h3 style="width: 100%;" id="header-ee092b2f-8920-9066-f853-8b97b225858b"><span>Front three: Industry</span></h3>
 <p style="width: 100%;"><span>I've been seeking anyone who will help run events nationally to bring HAX camp and our web components to more and more people, and we've got some takers already. There will be HAXcamp at Michigan (as part of Apereo in June), Penn State (Aug) and potentially two or three additional locations though we are still in talks with local organizers.</span></p>
-<p style="width: 100%;">Want to host a HAXcamp? It's simple -- get a space, agree to talk web components (or integration into platforms there-in) in an <lrn-vocab term="Un-conference format" resource="#f3c1c0c3-2c92-54a5-8c10-95432f47dd17" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " style="width: 100%;" schema-resource-id="#f3c1c0c3-2c92-54a5-8c10-95432f47dd17"><span><wikipedia-query search="Unconference" _title="Unconference Wikipedia article"></wikipedia-query>
+<p style="width: 100%;">Want to host a HAXcamp? It's simple -- get a space, agree to talk web components (or integration into platforms there-in) in an <lrn-vocab term="Un-conference format" resource="#f3c1c0c3-2c92-54a5-8c10-95432f47dd17" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " style="width: 100%;" schema-resource-id="#f3c1c0c3-2c92-54a5-8c10-95432f47dd17"><span><wikipedia-query search="Unconference"></wikipedia-query>
 </span></lrn-vocab>
 , and let me or one of the ELMS:LN core members know you're interested in branding it as <a href="https://hax.camp">HAXcamp</a>
 . That's it. Let's kick web components up to the next level.</p>
