Page updated: Kept moving: Week 0 (item-88a3c232-54d6-4179-8059-634223f201c4)

--- a/pages/keep-moving-week-0/index.html
+++ b/pages/keep-moving-week-0/index.html
@@ -1,1 +1,4 @@
-<p></p>
+<p>I've <i>felt</i>
+ 2020 coming for a long time. I still recall the realization. In 2012 I had a vision of what I had to build with my life. The pattern it would form. And then I remember in 2015 having some meeting as our team was growing and realizing that we were at the start, nowhere near the end of what the journey would be.</p>
+<p>Since 2015, I've said 2020 would be a big year. I didn't know why and I certainly didn't see a global pandemic forcing a total change to the way people work and operate.</p>
+<p>Yea, we'll get past where we are now, but I think it's important to look at what's happening in real time and keep a record of it. I'm going to try and do this weekly while times are as they are. I wrote the </p>
