--- a/404.html
+++ b/404.html
@@ -2,7 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
+    <title>bto-pro</title>
+    <link rel="icon" href="files/haxcms-managed/16x16-1500x500.png">
+    <meta name="theme-color" content="#aeff00">
+    <meta name="robots" content="index, follow">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="bto-pro">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="bto-pro">
+    <link rel="apple-touch-icon" sizes="48x48" href="files/haxcms-managed/48x48-1500x500.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="files/haxcms-managed/72x72-1500x500.png">
+    <link rel="apple-touch-icon" sizes="96x96" href="files/haxcms-managed/96x96-1500x500.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="files/haxcms-managed/144x144-1500x500.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="files/haxcms-managed/192x192-1500x500.png">
+    <meta name="msapplication-TileImage" content="files/haxcms-managed/144x144-1500x500.png">
+    <meta name="msapplication-TileColor" content="#aeff00">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="description" content="Mind of the Information Altruist" />
+    <meta name="og:sitename" property="og:sitename" content="bto-pro" />
+    <meta name="og:title" property="og:title" content="bto-pro" />
+    <meta name="og:type" property="og:type" content="article" />
+    <meta name="og:url" property="og:url" content="http://haxcms.ddev.site/sites/btopro/" />
+    <meta name="og:description" property="og:description" content="Mind of the Information Altruist" />
+    <meta name="og:image" property="og:image" content="files/1500x5001.jpeg" />
+    <meta name="twitter:card" property="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" property="twitter:site" content="http://haxcms.ddev.site/sites/btopro/" />
+    <meta name="twitter:title" property="twitter:title" content="bto-pro" />
+    <meta name="twitter:description" property="twitter:description" content="Mind of the Information Altruist" />
+    <meta name="twitter:image" property="twitter:image" content="files/1500x5001.jpeg" />
+    <meta rel="cc:license" href="https://creativecommons.org/licenses/by-sa/4.0/" content="License: Creative Commons: Attribution Share a like"/>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
@@ -15,7 +44,6 @@
       // http://www.foo.tld/?p=/one/two&q=a=b~and~c=d#qwe
       // Note: this 404.html file must be at least 512 bytes for it to work
       // with Internet Explorer (it is currently > 512 bytes)
-
       // If you're creating a Project Pages site and NOT using a custom domain,
       // then set segmentCount to 1 (enterprise users may need to set it to > 1).
       // This way the code will only replace the route part of the path, and not
@@ -38,6 +66,5 @@
 
     </script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
