path name in 404

--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
     <meta name="og:sitename" property="og:sitename" content="bto-pro" />
     <meta name="og:title" property="og:title" content="bto-pro" />
     <meta name="og:type" property="og:type" content="article" />
-    <meta name="og:url" property="og:url" content="http://haxcms.ddev.site/sites/btopro/" />
+    <meta name="og:url" property="og:url" content="http://btopro.com/" />
     <meta name="og:description" property="og:description" content="Mind of the Information Altruist" />
     <meta name="og:image" property="og:image" content="files/1500x5001.jpeg" />
     <meta name="twitter:card" property="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" property="twitter:site" content="http://haxcms.ddev.site/sites/btopro/" />
+    <meta name="twitter:site" property="twitter:site" content="http://btopro.com/" />
     <meta name="twitter:title" property="twitter:title" content="bto-pro" />
     <meta name="twitter:description" property="twitter:description" content="Mind of the Information Altruist" />
     <meta name="twitter:image" property="twitter:image" content="files/1500x5001.jpeg" />
