haxcms disqus correct

--- a/pages/item-1c3a357d-2c98-4f1d-b9c6-5a0f66b2c40f/index.html
+++ b/pages/item-1c3a357d-2c98-4f1d-b9c6-5a0f66b2c40f/index.html
@@ -1,2 +1,1 @@
-
-<haxcms-site-disqus site-name="btopro-com"></haxcms-site-disqus>
+<haxcms-site-disqus short-name="btopro-com"></haxcms-site-disqus>
