Page updated: I, Developed. (item-72eec0cc-53fc-4a38-9e2b-79ed350ba3dc)

--- a/pages/item-72eec0cc-53fc-4a38-9e2b-79ed350ba3dc/index.html
+++ b/pages/item-72eec0cc-53fc-4a38-9e2b-79ed350ba3dc/index.html
@@ -1,1 +1,27 @@
+
 <p></p>
+<video-player source="https://www.youtube.com/watch?v=wjA9-eSr9ao" caption="https://www.youtube.com/watch?v=wjA9-eSr9ao" accent-color="blue" crossorigin="anonymous" sticky-corner="none" resource="#1e0457a6-7c5b-a1d3-2999-7e10d913ec2f" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " element-visible lang="en" media-title="Spoken: I, Developed." t="{&quot;embeddedMedia&quot;:&quot;embedded media&quot;}" source-type="youtube" sources="[]" source-data="[{&quot;src&quot;:&quot;https://www.youtube.com/embed/wjA9-eSr9ao&quot;,&quot;type&quot;:&quot;&quot;}]" tracks="[]"></video-player>
+<p>When I was a child, my parents helped me to develop. I had a loving home, that encouraged my growth and development in all aspects of life. Parents, thank you for developing your children this year and the years leading to this moment.</p>
+<p>Being mostly grown up though, I am impressed how many parents value development. That we all understand the importance of developing. That we love the idea, that it excites us to a level where we shout for it, crave it, demand; development.</p>
+<p>I wonder though if the artists in our community came together, would we cheer for their development. If we could, would we watch as future artists, doctors, teachers, carpenters, masons, officers, and scientists, developed each week?</p>
+<p>Develop we'd shout! Go for it. Swing that hammer! Grab that brush! Let's go TEAACH! No!!! Not that scalpel, the other scalpel over there! PAINT! PAAAIINNNT! Why won't he paint!?!?</p>
+<p>To see all the artists, doctors, teachers, carpenters, masons, officers, scientists, and to just know. To know they would develop, if we encouraged them. If we believed in their path, that they could manifest that belief. That they would just, develop. What an awesome world that would be.</p>
+<p>I am incredibly privileged&#160;to have gotten the chance to develop this season.</p>
+<p>I Developed&#160;builders, creators, helpers, and problem solvers.</p>
+<p>I Developed&#160;friends, goofballs, the sillies, grit, willpower, belief, good habits and fun, positive connections.</p>
+<p>I Developed brothers, sons, fathers, leaders and stronger communities those labels supply.</p>
+<p>I Developed&#160;with a sense of glorious purpose and burdening responsibility.</p>
+<p>I Developed&#160;our children to explore and find joy in who they are and the possibility of who they can become.</p>
+<p>I Developed a brighter future.</p>
+<p>What's just as important though, is what I didn't develop.</p>
+<p>I didn't develop only the best, but they developed too, because I developed everyone.</p>
+<p>I didn't develop to win, we don't even use that word, I hate that word... but we won most of our games, because I developed everyone.</p>
+<p>As odd as it sounds, I didn't set out to develop hockey players this season, but it happened anyway because I believed in, and developed, everyone.</p>
+<p>I developed because we have those artists, doctors, teachers, carpenters, masons, officers, and scientists of our future community, right here, right now, all in one place.</p>
+<p>And they need developed.</p>
+<p>They need encouragement to grow and find who they choose to become.</p>
+<p>I developed everyone and I am a better person, friend, husband and father because of it.</p>
+<p>Thank you boys, and boys thank your parents, for developing this regular season.</p>
+<p>And with the regular season over Boys. Are you ready for playoffs? You know the next part then.</p>
+<p>We are... Icers.</p>
+<p>We. Develop. Leaders.</p>
