'Page added:Page (item-d1da859f-071e-4f02-b88a-12c60694e775)'

--- a/pages/item-1222b362-d24d-0aa7-20e7-724767f57656/index.html
+++ b/pages/item-1222b362-d24d-0aa7-20e7-724767f57656/index.html
@@ -6,7 +6,7 @@
 Webcomponents explained</h2>
 <p>That technology, is webcomponents. Webcomponents, which you can find out more about on <a href="https://www.webcomponents.org/" rel="nofollow">webcomponents.org</a>
  is a four part browser standard that fundamentally changes what's possible in web based application development. The important thing to know is that webcomponents allows developers to define <em>custom HTML elements and expresses how the browser handles them</em>
-. So, bringing this back to education: <em>We can use this technology standard in order to build <a href="https://github.com/LRNWebComponents/">pedagogically focused, valid, HTML tags</a>
+. So, bringing this back to education: <em>We can use this technology standard in order to build <a href="https://github.com/haxtheweb/">pedagogically focused, valid, HTML tags</a>
 </em>
 .</p>
 <h3><a id="user-content-quick-note" class="anchor" aria-hidden href="#quick-note"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
