--- a/pages/item-e3d7d519-9549-4e44-9ab8-b9df805a3531/index.html
+++ b/pages/item-e3d7d519-9549-4e44-9ab8-b9df805a3531/index.html
@@ -20,7 +20,7 @@
 
  - tweet me asking questions</li>
 
-<li><a href="https://github.com/elmsln/haxcms">https://github.com/elmsln/haxcms</a>
+<li><a href="https://github.com/haxtheweb/haxcms">https://github.com/haxtheweb/haxcms</a>
 
  - Join us in the issue queues for the project with ideas, bugs and suggestion<br/></li>
 
