'Page details updated: Go time (item-5d8c0376-f796-41db-92f5-75eccf36d24b)'

--- a/pages/item-5d8c0376-f796-41db-92f5-75eccf36d24b/index.html
+++ b/pages/item-5d8c0376-f796-41db-92f5-75eccf36d24b/index.html
@@ -9,9 +9,11 @@
 
 
 
-". Mike shows me Web components; I immediately extrapolate and know what this means. I start playing around and get an icon to load on screen. My world changes... I become obsessed. Mike and I&#160; talk about our <a href="https://www.youtube.com/watch?v=dGi8n1LAQbg" target="_blank">experiments a few months</a> later.</p>
+
+". Mike shows me Web components; I immediately extrapolate and know what this means. I start playing around and get an icon to load on screen. My world changes... I become obsessed. Mike and I&#160; talk about our <a href="https://www.youtube.com/watch?v=dGi8n1LAQbg" target="_blank" data-accent="12">experiments a few months</a> later.</p>
 <h2 data-original-level="H2" id="header-a46c8ce7-adf6-eae0-8740-179e4623ccfb" data-design-treatment="horz-lg" data-primary="11">2018</h2>
 <grid-plate disable-responsive layout="2-1" data-padding="s" data-primary="15" data-accent="9"><a11y-gif-player src="https://media.giphy.com/media/7ugpU3wXWOq1G/giphy.gif" resource="#aeb6c945-f957-175b-cff4-2f8399f187eb" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " src-without-animation="https://haxapi.vercel.app/api/services/media/image/manipulate?quality=50&amp;src=https%3A%2F%2Fmedia.giphy.com%2Fmedia%2F7ugpU3wXWOq1G%2Fgiphy.gif" slot="col-2" longdesc="A cartoon coffee cup stirring itself"></a11y-gif-player>
+
 
 
 
@@ -22,7 +24,9 @@
 
 
 
+
 <a11y-gif-player src="https://media.giphy.com/media/vUAbdgzJZSuKA/giphy.gif" longdesc="Will Ferrell on celebrity jeopardy shaking his head." slot="col-3" resource="#b01429e9-e85f-9f8f-618f-81741975ee84" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " src-without-animation="https://haxapi.vercel.app/api/services/media/image/manipulate?quality=50&amp;src=https%3A%2F%2Fmedia.giphy.com%2Fmedia%2FvUAbdgzJZSuKA%2Fgiphy.gif"></a11y-gif-player>
+
 
 
 
