'Page details updated: Go time (item-5d8c0376-f796-41db-92f5-75eccf36d24b)'

--- a/pages/item-5d8c0376-f796-41db-92f5-75eccf36d24b/index.html
+++ b/pages/item-5d8c0376-f796-41db-92f5-75eccf36d24b/index.html
@@ -1,11 +1,12 @@
 
 <p data-design-treatment="dropCap-md" data-accent="10" data-primary="13">The year is <b>2024</b>, but do you know what season of life it is?&#160;<span>I ask myself this a lot recently. What season is it? Seasons of life are different than seasons of the year but represent themes in the same way. Winter, cold, Christmas, family, togetherness inside. Summer, no school, hot, late nights, catching 🐝 lightning bugs, 👫 family, together outside.</span></p>
-<p>Then, in my life, there's hockey season.. so.. every season. But somewhere beyond the seasons our family is in or the perpetual hockey season, there is another season of life I often look through the prism of: <mark data-primary="13">my dream</mark>. <b>my invention</b>. <i>my legacy</i>..</p>
+<p>Then, in my life, there's hockey season.. so.. every season. But somewhere beyond the seasons our family is in or the perpetual hockey season, there is another season of life I often look through the prism of: <mark data-primary="13">my dream</mark>. <b>my invention</b>. <i>my legacy</i>...</p>
 <p>I will now begin to regularly blog on this platform. Not because of any change in me personally, but because of a change in what our platform is capable of. To understand why it's important to note that I am currently writing to you from a <a href="https://github.com/haxtheweb/haxcms-nodejs" target="_blank" slot="col-3" data-accent="2">nodeJS version of HAXcms</a> running locally on my machine, let's look quickly at where we've been.</p>
 <h2 data-original-level="H2" id="header-a022856e-74aa-59b9-04c8-a32eea5c62a5" data-design-treatment="vert" data-primary="13">2015</h2>
 <p><abbr title="Headless Authoring eXperience" data-primary="21">HAX</abbr> is an idea discussed at a coffee shop among friends. We jot some notes. We go to a sprint, 5 of us I believe, and achieve effectively nothing beyond overwhelming feeling of "wow smart people could do that but we are dumb". The <i>rest of that year and 2016</i>,<span> a few prototypes here and there, basically just to pass the time and entertain myself with the notion of what it could be.</span></p>
 <h2 data-original-level="H2" id="header-51101b49-1d61-8879-0f4d-4e0f123e3635" data-design-treatment="horz-md" data-primary="14">2017</h2>
 <p>The lightning rod moment. Beers in the hotel room, "I'm telling you,&#160;<moar-sarcasm say=""></moar-sarcasm>
+
 
 
 
@@ -18,6 +19,7 @@
 
 
 
+
 <p slot="col-1" data-padding="xs" data-margin="s">The messing around turns into abandoning all other projects. The icons become buttons, cards, and rudimentary interfaces for elements that know how to edit other elements. By mid 2018 it's worth showcasing, and you can hear how the coffee and obsession has changed me. I don't just talk fast, <a href="https://www.youtube.com/watch?v=zq8pt4dyDiw&amp;list=PLJQupiji7J5cPvAknpzjPo1j_kGRs862D&amp;index=2" target="_blank">I talk about something that isn't there</a>. A world that is easy to work with (in my head). I am excited, and have been easily agitated since.</p></grid-plate>
 <h2 data-original-level="H2" id="header-d3807205-5c50-c572-443c-34a7488cf558" data-design-treatment="horz-10p" data-primary="15">2019</h2>
 <grid-plate disable-responsive layout="1-2-1"><p slot="col-2">I start teaching, we present to a bigger room with more co-presenters on these ideas, we run our 1st HAX camp.</p><p slot="col-2">You know <b>2020-2022</b> so "<i>let's just skip it</i>".</p><media-image source="files/41tqb7.jpg" accent-color="grey" size="wide" offset="none" slot="col-1" alt="Joke in which girl looking away from house fire. House is implying 2020 and girl is the coronavirus." citation="2020-2022"></media-image>
@@ -25,7 +27,9 @@
 
 
 
+
 <a11y-gif-player src="https://media.giphy.com/media/vUAbdgzJZSuKA/giphy.gif" longdesc="Will Ferrell on celebrity jeopardy shaking his head." slot="col-3" resource="#b01429e9-e85f-9f8f-618f-81741975ee84" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " src-without-animation="https://haxapi.vercel.app/api/services/media/image/manipulate?quality=50&amp;src=https%3A%2F%2Fmedia.giphy.com%2Fmedia%2FvUAbdgzJZSuKA%2Fgiphy.gif"></a11y-gif-player>
+
 
 
 
